--- a/packages/static-generation/Cargo.toml
+++ b/packages/static-generation/Cargo.toml
@@ -13,17 +13,18 @@ resolver = "2"
 [dependencies]
 dioxus-fullstack = { workspace = true }
 dioxus-lib.workspace = true
-dioxus-router = { workspace = true, features = ["fullstack"] }
+dioxus-router = { workspace = true }
 dioxus-ssr = { workspace = true, optional = true }
 dioxus-isrg = { workspace = true, optional = true }
-axum = { workspace = true, features = ["ws", "macros"], optional = true }
-tower-http = { workspace = true, features = ["fs"], optional = true }
 dioxus-devtools = { workspace = true, optional = true }
-dioxus-web = { workspace = true, features = ["hydrate"], optional = true }
+dioxus-web = { workspace = true, optional = true, features = ["hydrate"]}
+
+axum = { workspace = true, optional = true, features = ["ws", "macros"]}
+tower = { workspace = true, optional = true, features = ["util"]}
+tower-http = { workspace = true, optional = true, features = ["fs"]}
 tokio = { workspace = true, optional = true }
 http = { workspace = true, optional = true }
-tower = { workspace = true, features = ["util"], optional = true }
-tracing.workspace = true
+tracing = { workspace = true }
 
 [dev-dependencies]
 dioxus = { workspace = true }
@@ -33,7 +34,7 @@ criterion = { workspace = true }
 default = []
 server = [
     "dioxus-fullstack/server",
-    "dioxus-router/ssr",
+    # "dioxus-router/ssr",
     "dep:dioxus-ssr",
     "dep:tokio",
     "dep:http",
@@ -43,7 +44,9 @@ server = [
     "dep:tower",
 ]
 # server = ["dioxus-fullstack/server", "dioxus-router/ssr", "dep:dioxus-ssr", "dep:tokio", "dep:http", "dep:axum", "dep:tower-http", "dep:dioxus-hot-reload", "dep:dioxus-cli-config", "dep:tower"]
-web = ["dioxus-fullstack/web", "dioxus-router/web", "dep:dioxus-web"]
+web = ["dep:dioxus-web"]
+# web = ["dioxus-fullstack/web", "dep:dioxus-web"]
+# web = ["dioxus-fullstack/web", "dioxus-router/web", "dep:dioxus-web"]
 
 # [[bench]]
 # name = "incremental"
