remove random latent command chars

--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -28,7 +28,7 @@ futures-channel = { workspace = true }
 
 # dioxus-core = { workspace = true }
 # generational-box = { workspace = true }
-# todo: we shouldn't have any wasm-bindgen dependencies in the html cratea
+# todo: we shouldn't have any wasm-bindgen dependencies in the html crate
 # [target.'cfg(target_arch = "wasm32")'.dependencies]
 # wasm-bindgen = { workspace = true, optional = true }
 # js-sys = { version = "0.3.56", optional = true }
