--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -86,7 +86,8 @@ brotli = "6.0.0"
 dioxus-autofmt = { workspace = true }
 dioxus-check = { workspace = true }
 rsx-rosetta = { workspace = true }
-dioxus-rsx = { workspace = true, features = ["hot_reload"] }
+dioxus-rsx = { workspace = true }
+dioxus-rsx-hotreload = { workspace = true }
 dioxus-html = { workspace = true, features = ["hot-reload-context"] }
 dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-core-types = { workspace = true }
