--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["dom", "ui", "gui", "react"]
 dioxus-core = { workspace = true }
 dioxus-core-types = { workspace = true }
 dioxus-rsx = { workspace = true, optional = true }
+dioxus-rsx-hotreload = { workspace = true, optional = true }
 dioxus-html-internal-macro = { workspace = true }
 
 serde = { version = "1", features = ["derive"], optional = true }
@@ -69,7 +70,7 @@ file-engine = [
     # "web-sys?/FileList",
     # "web-sys?/FileReader"
 ]
-hot-reload-context = ["dep:dioxus-rsx", "dioxus-rsx/hot_reload_traits"]
+hot-reload-context = ["dep:dioxus-rsx", "dep:dioxus-rsx-hotreload"]
 html-to-rsx = []
 
 [package.metadata.docs.rs]
