--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -85,7 +85,7 @@ brotli = "6.0.0"
 
 dioxus-autofmt = { workspace = true }
 dioxus-check = { workspace = true }
-rsx-rosetta = { workspace = true }
+dioxus-rsx-rosetta = { workspace = true }
 dioxus-rsx = { workspace = true }
 dioxus-rsx-hotreload = { workspace = true }
 dioxus-html = { workspace = true, features = ["hot-reload-context"] }
