--- a/packages/core-macro/Cargo.toml
+++ b/packages/core-macro/Cargo.toml
@@ -13,19 +13,18 @@ keywords = ["dom", "ui", "gui", "react"]
 proc-macro = true
 
 [dependencies]
-proc-macro2 = { version = "1.0" }
+proc-macro2 = { workspace = true }
 quote = { workspace = true }
 syn = { workspace = true, features = ["full", "extra-traits", "visit"] }
 dioxus-rsx = { workspace = true }
 convert_case = { workspace = true }
 
-# testing
 [dev-dependencies]
 dioxus = { workspace = true }
 dioxus-html = { workspace = true, features = ["serialize"]}
-rustversion = "1.0"
+rustversion = { workspace = true }
 tokio = { workspace = true, features = ["full", "time"] }
-trybuild = "1.0"
+trybuild = { workspace = true }
 
 [features]
 default = []
