--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -11,40 +11,33 @@ keywords = ["dom", "ui", "gui", "react"]
 
 [dependencies]
 dioxus-core-types = { workspace = true }
+const_format = { workspace = true }
+futures-channel = { workspace = true }
+generational-box = { workspace = true }
+longest-increasing-subsequence = { workspace = true }
 rustc-hash = { workspace = true }
-longest-increasing-subsequence = "0.1.0"
-futures-util = { workspace = true, default-features = false, features = [
-    "alloc",
-    "std",
-] }
+rustversion = { workspace = true }
 slab = { workspace = true }
 slotmap = { workspace = true }
-futures-channel = { workspace = true }
 tracing = { workspace = true }
-serde = { version = "1", features = ["derive"], optional = true }
-generational-box = { workspace = true }
-rustversion = "1.0.17"
-const_format = { workspace = true }
 warnings = { workspace = true }
+futures-util = { workspace = true, default-features = false, features = ["alloc", "std"] }
+serde = { workspace = true, optional = true, features = ["derive"] }
 
 [dev-dependencies]
-tokio = { workspace = true, features = ["full"] }
-tracing-fluent-assertions = "0.3.0"
 dioxus = { workspace = true }
-dioxus-html = { workspace = true, features = ["serialize"] }
-pretty_assertions = "1.3.0"
-rand = "0.8.5"
 dioxus-ssr = { workspace = true }
-reqwest = { workspace = true}
-tracing-subscriber = "0.3.18"
+dioxus-html = { workspace = true, features = ["serialize"] }
+tokio = { workspace = true, features = ["full"] }
+rand = { workspace = true }
+reqwest = { workspace = true }
+tracing-subscriber = { workspace = true }
+tracing-fluent-assertions = "0.3.0"
+pretty_assertions = "1.3.0"
 
 [dev-dependencies.web-sys]
 version = "0.3.56"
-features = [
-    "Document",
-    "HtmlElement",
-    "Window"
-]
+features = ["Document", "HtmlElement", "Window"]
 
 [features]
 serialize = ["dep:serde"]
