--- a/packages/extension/Cargo.toml
+++ b/packages/extension/Cargo.toml
@@ -9,9 +9,9 @@ publish = false
 [dependencies]
 wasm-bindgen = { workspace = true }
 dioxus-autofmt = { workspace = true }
-rsx-rosetta = { workspace = true }
+dioxus-rsx-rosetta = { workspace = true }
 html_parser = { workspace = true }
-syn ={ workspace = true }
+syn = { workspace = true }
 
 [lib]
 crate-type = ["cdylib", "rlib"]
