--- a/packages/generational-box/Cargo.toml
+++ b/packages/generational-box/Cargo.toml
@@ -13,7 +13,7 @@ keywords = ["generational", "box", "memory", "allocator"]
 parking_lot = "0.12.1"
 
 [dev-dependencies]
-rand = "0.8.5"
+rand = { workspace = true }
 criterion = { workspace = true }
 
 [features]
