use rc generational boxes for event handlers as well

--- a/packages/generational-box/Cargo.toml
+++ b/packages/generational-box/Cargo.toml
@@ -11,6 +11,7 @@ keywords = ["generational", "box", "memory", "allocator"]
 
 [dependencies]
 parking_lot = "0.12.1"
+tracing.workspace = true
 
 [dev-dependencies]
 rand = "0.8.5"
