--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -30,6 +30,7 @@ futures-channel = { workspace = true }
 serde_json = { version = "1", optional = true }
 tracing.workspace = true
 rustversion = "1.0.17"
+web-time = "1.1.0"
 
 [dependencies.web-sys]
 optional = true
