--- a/packages/interpreter/Cargo.toml
+++ b/packages/interpreter/Cargo.toml
@@ -13,18 +13,15 @@ keywords = ["dom", "ui", "gui", "react", "wasm"]
 [dependencies]
 wasm-bindgen = { workspace = true, optional = true }
 wasm-bindgen-futures = { workspace = true, optional = true }
-js-sys = { version = "0.3.56", optional = true }
-web-sys = { version = "0.3.56", optional = true, features = [
-    "Element",
-    "Node",
-] }
-sledgehammer_bindgen = { version = "0.6.0", default-features = false, optional = true }
-sledgehammer_utils = { version = "0.3.1", optional = true }
-serde = { version = "1.0", features = ["derive"], optional = true }
+js-sys = { workspace = true, optional = true }
+web-sys = { workspace = true, optional = true, features = ["Element", "Node"] }
+serde = { workspace = true, optional = true, features = ["derive"] }
 rustc-hash = { workspace = true, optional = true }
 
 dioxus-core = { workspace = true, optional = true }
 dioxus-core-types = { workspace = true, optional = true }
+sledgehammer_bindgen = { version = "0.6.0", default-features = false, optional = true }
+sledgehammer_utils = { version = "0.3.1", optional = true }
 
 [build-dependencies]
 lazy-js-bundle = { workspace = true }
