--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,22 +32,19 @@ members = [
     "packages/static-generation",
     "packages/lazy-js-bundle",
 
-    # Fullstack examples
-    "packages/fullstack/examples/hello-world",
-    "packages/fullstack/examples/router",
-    "packages/fullstack/examples/streaming",
-    "packages/fullstack/examples/desktop",
-    "packages/fullstack/examples/auth",
-    "packages/fullstack/examples/hackernews",
-
-    # Static generation examples
-    "packages/static-generation/examples/simple",
-    "packages/static-generation/examples/router",
-    "packages/static-generation/examples/github-pages",
     # Full project examples
-    "examples/tailwind",
-    "examples/PWA-example",
-    # "examples/openid_connect_demo",
+    "example-projects/tailwind",
+    "example-projects/pwa",
+    "example-projects/fullstack-hello-world",
+    "example-projects/fullstack-router",
+    "example-projects/fullstack-streaming",
+    "example-projects/fullstack-desktop",
+    "example-projects/fullstack-auth",
+    "example-projects/fullstack-hackernews",
+    "example-projects/ssg-simple",
+    "example-projects/ssg-router",
+    "example-projects/ssg-github-pages",
+
     # Playwright tests
     "packages/playwright-tests/liveview",
     "packages/playwright-tests/web",
