--- a/packages/rsx/Cargo.toml
+++ b/packages/rsx/Cargo.toml
@@ -13,20 +13,14 @@ keywords = ["dom", "ui", "gui", "react"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-quote = { workspace = true }
 proc-macro2 = { workspace = true, features = ["span-locations"] }
-dioxus-core = { workspace = true, optional = true }
+proc-macro2-diagnostics = { workspace = true }
+quote = { workspace = true }
 syn = { workspace = true, features = ["full", "extra-traits", "visit", "visit-mut"] }
-serde = { workspace = true, features = ["derive"], optional = true }
-internment = { version = "0.7.0", optional = true }
 tracing = { workspace = true }
-proc-macro2-diagnostics = { version = "0.10", default-features = false }
 
 [features]
-default = ["hot_reload"]
-hot_reload_traits = []
-hot_reload = ["dep:internment", "dep:dioxus-core", "hot_reload_traits", "serde"]
-serde = ["dep:serde", "dioxus-core/serialize"]
+default = []
 
 [dev-dependencies]
 prettyplease = { workspace = true }
