--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,11 @@ dioxus-hot-reload = { path = "packages/hot-reload", version = "0.6.0-alpha.0" }
 dioxus-fullstack = { path = "packages/fullstack", version = "0.6.0-alpha.1" }
 dioxus-static-site-generation = { path = "packages/static-generation", version = "0.6.0-alpha.0" }
 dioxus_server_macro = { path = "packages/server-macro", version = "0.6.0-alpha.0", default-features = false }
+dioxus-rsx-hotreload = { path = "packages/rsx-hotreload", version = "0.6.0-alpha.2" }
+dioxus-rsx-rosetta = { path = "packages/rsx-rosetta", version = "0.6.0-alpha.2" }
+dioxus-devtools = { path = "packages/devtools", version = "0.6.0-alpha.2" }
+dioxus-devtools-types = { path = "packages/devtools-types", version = "0.6.0-alpha.2" }
+
 lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.6.0-alpha.0" }
 
 manganis-cli-support = { version = "0.3.0-alpha.1", features = ["html"] }
@@ -100,6 +105,8 @@ warnings = { version = "0.2.0" }
 # a fork of pretty please for tests
 prettier-please = { version = "0.3.0", features = ["verbatim"]}
 
+clap = { version = "4.5.7" }
+askama_escape = "0.10.3"
 tracing = "0.1.37"
 tracing-futures = "0.2.5"
 toml = "0.8"
@@ -145,9 +152,40 @@ once_cell = "1.17.1"
 uuid = "1.9.1"
 convert_case = "0.6.0"
 tokio-tungstenite = { version = "0.23.1" }
+gloo-timers = "0.3.0"
+fluent-uri = { version = "0.2.0", features = ["serde"] }
+internment = { version = "0.7.0" }
+proc-macro2-diagnostics = { version = "0.10", default-features = false }
+env_logger = "0.11.0"
+tracing-subscriber = "0.3.17"
+chrono = { version = "0.4.34" }
+gloo = { version = "0.8.0" }
+gloo-utils = { version = "0.1.6" }
+rustversion = "1.0.17"
+rand = "0.8.5"
+longest-increasing-subsequence = "0.1.0"
+trybuild = "1.0"
+js-sys = "0.3.56"
+web-sys = { version = "0.3.56", default-features = false }
+
+# desktop
+wry = { version = "0.43.0", default-features = false }
+tao = { version = "0.30.0", features = ["rwh_05"] }
+webbrowser = "1.0.1"
+infer = "0.16.0"
+dunce = "1.0.2"
+urlencoding = "2.1.2"
+global-hotkey = "0.6.0"
+rfd = { version = "0.14", default-features = false }
+muda = "0.14.0"
+cocoa = "0.26"
+core-foundation = "0.10.0"
+objc = { version = "0.2.7", features = ["exception"] }
+objc_id = "0.1.1"
 
 # cli, cli-config
 dirs = "5.0.1"
+cargo-config2 = "0.1.26"
 
 criterion = { version = "0.5" }
 
