swtich to runtime-config

--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -16,7 +16,7 @@ thiserror = { workspace = true }
 wasm-bindgen-cli-support = "0.2"
 wasm-bindgen-shared = "0.2"
 colored = "2.0.0"
-dioxus-cli-config = { workspace = true, features = ["cli"], default-features = false }
+dioxus-runtime-config = { workspace = true, features = ["cli"], default-features = false }
 
 # features
 log = "0.4.14"
