--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
     "packages/dioxus-lib",
     "packages/core",
     "packages/cli",
-    "packages/cli-config",
+    "packages/runtime-config",
     "packages/core-macro",
     "packages/core-types",
     "packages/config-macro",
@@ -89,7 +89,7 @@ dioxus-check = { path = "packages/check", version = "0.6.0-alpha.0" }
 dioxus-rsx = { path = "packages/rsx", version = "0.6.0-alpha.0" }
 rsx-rosetta = { path = "packages/rsx-rosetta", version = "0.6.0-alpha.0" }
 dioxus-signals = { path = "packages/signals", version = "0.6.0-alpha.0" }
-dioxus-cli-config = { path = "packages/cli-config", version = "0.6.0-alpha.0", default-features = false}
+dioxus-runtime-config = { path = "packages/runtime-config", version = "0.6.0-alpha.0", default-features = false}
 generational-box = { path = "packages/generational-box", version = "0.6.0-alpha.0" }
 dioxus-hot-reload = { path = "packages/hot-reload", version = "0.6.0-alpha.0" }
 dioxus-fullstack = { path = "packages/fullstack", version = "0.6.0-alpha.1" }
