--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -19,7 +19,7 @@ dioxus-html = { workspace = true, features = [
 ] }
 dioxus-signals = { workspace = true, optional = true }
 dioxus-interpreter-js = { workspace = true, features = ["binary-protocol", "serialize"] }
-dioxus-cli-config = { workspace = true, features = ["read-config"] }
+dioxus-runtime-config = { workspace = true }
 generational-box = { workspace = true }
 # hotreload only works on desktop platforms.... mobile is still wip
 dioxus-hot-reload = { workspace = true, optional = true, features = ["serve", "client"]}
