--- a/packages/ssr/Cargo.toml
+++ b/packages/ssr/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["dom", "ui", "gui", "react", "ssr"]
 [dependencies]
 dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-html = { workspace = true, features = ["document"]}
-dioxus-rutime-config = { workspace = true, optional = true }
+dioxus-runtime-config = { workspace = true, optional = true }
 dioxus-interpreter-js = { workspace = true }
 generational-box = { workspace = true }
 askama_escape = "0.10.3"
@@ -45,7 +45,7 @@ fs_extra = "1.2.0"
 
 [features]
 default = []
-incremental = ["dep:tokio", "dep:chrono", "dep:dioxus-rutime-config"]
+incremental = ["dep:tokio", "dep:chrono", "dep:dioxus-runtime-config"]
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
