undo launch changes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,21 +57,14 @@ members = [
     # manganis
     "packages/manganis",
     "packages/manganis-macro",
-    "example-projects/manganis-test-package",
-    "example-projects/manganis-test-package/test-package-dependency",
-    "example-projects/manganis-test-package/test-package-nested-dependency",
 
-    # Helpful full projects
-    "example-projects/hello-world",
-    "example-projects/router",
-    "example-projects/streaming",
-    "example-projects/desktop",
-    "example-projects/auth",
-    "example-projects/hackernews",
-    "example-projects/fullstack-mobile",
-    "example-projects/tailwind",
-    "example-projects/pwa",
-    "example-projects/liveview-router",
+    # Fullstack examples
+    "packages/fullstack/examples/hello-world",
+    "packages/fullstack/examples/router",
+    "packages/fullstack/examples/streaming",
+    "packages/fullstack/examples/desktop",
+    "packages/fullstack/examples/auth",
+    "packages/fullstack/examples/hackernews",
 ]
 
 [workspace.package]
