--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["dom", "ui", "gui", "react"]
 
 [dependencies]
 rustc-hash = { workspace = true }
-longest-increasing-subsequence = "0.1.0"
+longest-increasing-subsequence = { workspace = true }
 futures-util = { workspace = true, default-features = false, features = [
     "alloc",
     "std",
@@ -20,9 +20,9 @@ slab = { workspace = true }
 slotmap = { workspace = true }
 futures-channel = { workspace = true }
 tracing = { workspace = true }
-serde = { version = "1", features = ["derive"], optional = true }
+serde = {workspace = true, optional = true, features = ["derive"] }
 generational-box = { workspace = true }
-rustversion = "1.0.17"
+rustversion = { workspace = true }
 const_format = { workspace = true }
 warnings = { workspace = true }
 manganis = { workspace = true, default-features = false, optional = true }
@@ -33,10 +33,10 @@ tracing-fluent-assertions = "0.3.0"
 dioxus = { workspace = true }
 dioxus-html = { workspace = true, features = ["serialize"] }
 pretty_assertions = "1.3.0"
-rand = "0.8.5"
+rand = { workspace = true }
 dioxus-ssr = { workspace = true }
 reqwest = { workspace = true}
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { workspace = true }
 
 [dev-dependencies.web-sys]
 version = "0.3.56"
