improve documentation for the server function macro

--- a/packages/server-macro/Cargo.toml
+++ b/packages/server-macro/Cargo.toml
@@ -19,6 +19,12 @@ syn = { workspace = true, features = ["full"] }
 convert_case = { workspace = true }
 server_fn_macro = "0.6.11"
 
+[dev-dependencies]
+dioxus = { workspace = true, features = ["fullstack", "server"] }
+serde = { workspace = true, features = ["derive"] }
+tower-http = { workspace = true, features = ["timeout"]}
+axum = { workspace = true }
+
 [lib]
 proc-macro = true
 
