Chore: hoist example projects for discoverability (#2959)
* hoist example projects, remove oidc

* move over example projects from the separate repo

* Update ecommerce site to the latest version of dioxus

* update wifi scanner to 0.5

* drop the chatbot example; might be restored in a separate PR

---------

Co-authored-by: Evan Almloff <evanalmloff@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,22 +32,24 @@ members = [
     "packages/static-generation",
     "packages/lazy-js-bundle",
 
-    # Fullstack examples
-    "packages/fullstack/examples/hello-world",
-    "packages/fullstack/examples/router",
-    "packages/fullstack/examples/streaming",
-    "packages/fullstack/examples/desktop",
-    "packages/fullstack/examples/auth",
-    "packages/fullstack/examples/hackernews",
-
-    # Static generation examples
-    "packages/static-generation/examples/simple",
-    "packages/static-generation/examples/router",
-    "packages/static-generation/examples/github-pages",
     # Full project examples
+    "example-projects/fullstack-hackernews",
+    "example-projects/ecommerce-site",
+    "example-projects/wifi-scanner",
+    "example-projects/file-explorer",
+
+    # Simple examples that require a crate
     "examples/tailwind",
-    "examples/PWA-example",
-    # "examples/openid_connect_demo",
+    "examples/pwa",
+    "examples/fullstack-hello-world",
+    "examples/fullstack-router",
+    "examples/fullstack-streaming",
+    "examples/fullstack-desktop",
+    "examples/fullstack-auth",
+    "examples/ssg-simple",
+    "examples/ssg-router",
+    "examples/ssg-github-pages",
+
     # Playwright tests
     "packages/playwright-tests/liveview",
     "packages/playwright-tests/web",
@@ -307,11 +309,6 @@ doc-scrape-examples = true
 
 [[example]]
 name = "errors"
-required-features = ["desktop"]
-doc-scrape-examples = true
-
-[[example]]
-name = "file_explorer"
 required-features = ["desktop"]
 doc-scrape-examples = true
 
