--- a/packages/rsx-rosetta/Cargo.toml
+++ b/packages/rsx-rosetta/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rsx-rosetta"
+name = "dioxus-rsx-rosetta"
 version = { workspace = true }
 edition = "2021"
 authors = ["Jonathan Kelley"]
@@ -21,11 +21,6 @@ proc-macro2 = { workspace = true }
 quote = { workspace = true }
 syn = { workspace = true, features = ["full"] }
 convert_case = { workspace = true }
-
-# [features]
-# default = ["html"]
-
-# eventually more output options
 
 [dev-dependencies]
 pretty_assertions = "1.2.1"
