--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ members = [
     "packages/autofmt",
     "packages/check",
     "packages/rsx",
+    "packages/rsx-hotreload",
     "packages/rsx-rosetta",
     "packages/generational-box",
     "packages/signals",
@@ -87,6 +88,7 @@ dioxus-liveview = { path = "packages/liveview", version = "0.6.0-alpha.0" }
 dioxus-autofmt = { path = "packages/autofmt", version = "0.6.0-alpha.0" }
 dioxus-check = { path = "packages/check", version = "0.6.0-alpha.0" }
 dioxus-rsx = { path = "packages/rsx", version = "0.6.0-alpha.0" }
+dioxus-rsx-hotreload = { path = "packages/rsx-hotreload", version = "0.6.0-alpha.0" }
 dioxus-rsx-rosetta = { path = "packages/rsx-rosetta", version = "0.6.0-alpha.0" }
 dioxus-signals = { path = "packages/signals", version = "0.6.0-alpha.0" }
 dioxus-cli-config = { path = "packages/cli-config", version = "0.6.0-alpha.0", default-features = false}
