--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["dom", "ui", "gui", "react"]
 [dependencies]
 dioxus-core = { workspace = true }
 dioxus-core-macro = { workspace = true }
+dioxus-core-types = { workspace = true }
 dioxus-rsx = { workspace = true, optional = true }
 dioxus-html-internal-macro = { workspace = true }
 dioxus-hooks = { workspace = true }
@@ -96,7 +97,7 @@ file-engine = [
 ]
 wasm-bind = ["dep:web-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
 native-bind = ["dep:tokio", "file-engine"]
-hot-reload-context = ["dep:dioxus-rsx", "dioxus-rsx/hot_reload_traits"]
+hot-reload-context = ["dep:dioxus-rsx"]
 html-to-rsx = []
 
 [package.metadata.docs.rs]
